# wayscriber

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml
configurator/: Cargo.toml  README.md
configurator/src/: app.rs  main.rs  messages.rs
configurator/src/models/: color.rs  config.rs  error.rs  fields.rs  keybindings.rs  mod.rs  tab.rs  util.rs
docs/: AUR-UPDATE-WORKFLOW.md  CONFIG.md  MIGRATION.md  SETUP.md  codebase-overview.md
docs/board/: HARDCODED_KEYBINDINGS.md
packaging/: .SRCINFO  PKGBUILD  PKGBUILD.hyprmarker-meta  hyprmarker.service  wayscriber.service
src/: daemon.rs  legacy.rs  lib.rs  main.rs  notification.rs  ui.rs  util.rs
src/backend/: mod.rs  wayland.rs
src/backend/wayland/: backend.rs  capture.rs  handlers.rs  mod.rs  session.rs  state.rs  surface.rs
src/backend/wayland/handlers/: buffer.rs  compositor.rs  keyboard.rs  layer.rs  (+6 more)
src/capture/: clipboard.rs  dependencies.rs  file.rs  manager.rs  mod.rs  pipeline.rs  portal.rs  tests.rs  types.rs
src/capture/sources/: hyprland.rs  mod.rs  portal.rs  reader.rs
src/config/: enums.rs  keybindings.rs  migration.rs  mod.rs  types.rs
src/draw/: canvas_set.rs  color.rs  dirty.rs  font.rs  frame.rs  mod.rs  render.rs  shape.rs
src/input/: board_mode.rs  events.rs  mod.rs  modifiers.rs  state.rs  tool.rs
src/input/state/: actions.rs  core.rs  highlight.rs  mod.rs  mouse.rs  render.rs  tests.rs
src/session/: mod.rs  options.rs  snapshot.rs  storage.rs  tests.rs
tests/: cli.rs  ui.rs
tools/: README.md  fetch-all-deps.sh  install.sh  reload-daemon.sh  update-aur.sh
